--- a/app/code/core/Mage/Tag/view/frontend/product/rss/link.phtml
+++ b/app/code/core/Mage/Tag/view/frontend/product/rss/link.phtml
@@ -7,6 +7,7 @@
  * @copyright   {copyright}
  * @license     {license_link}
  */
+/** @var $this Mage_Tag_Block_Catalog_Product_Rss_Link */
 ?>
 <?php if ($this->getLinkUrl()): ?>
     <a href="<?php echo $this->getLinkUrl(); ?>" class="nobr link-rss"><?php echo $this->__('Subscribe to Feed') ?></a>
