--- a/app/code/core/Mage/DesignEditor/view/frontend/css/styles.css
+++ b/app/code/core/Mage/DesignEditor/view/frontend/css/styles.css
@@ -112,6 +112,22 @@ body {
     line-height: 17px;
     cursor: default;
 }
+.vde_element_remove {
+    margin: -26px -6px 0px -4px;
+    padding: 0px;
+    border-width: 2px 5px 6px 7px;
+    border-image: url(../images/stub.png) 2 5 6 7 stretch stretch;
+    border-image-outset: fill;
+    -webkit-border-image: url(../images/stub.png) 2 5 6 7 stretch stretch;
+    -moz-border-image: url(../images/stub.png) 2 5 6 7 stretch stretch;
+    max-width: 20px;
+    height: 18px;
+    overflow: hidden;
+    text-align: right;
+    line-height: 17px;
+    cursor: default;
+    float: right;
+}
 .vde_element_wrapper.vde_container {
     border: 2px solid #7bc361;
 }
