--- a/app/code/core/Mage/Backend/view/adminhtml/widget/button/split.phtml
+++ b/app/code/core/Mage/Backend/view/adminhtml/widget/button/split.phtml
@@ -13,9 +13,8 @@
  * Template for Mage_Backend_Block_Widget_Button_Split
  */
 ?>
-<?php $_buttonCssClass ='btn-add'; ?>
 <div id="<?php echo $this->getId(); ?>" class="buttons-group">
-    <div id="<?php echo $this->getId(); ?>_main_control" class="button<?php echo $_buttonCssClass ? ' '.$_buttonCssClass : '' ?>">
+    <div id="<?php echo $this->getId(); ?>_main_control" class="button <?php echo $this->getClass() ?: '' ?>">
         <span><?php echo $this->getLabel(); ?></span>
     </div>
     <div class="button btn-toggle" data-toggle="dropdown"><span>Select</span></div>
@@ -23,9 +22,11 @@
         <?php foreach ($this->getOptions() as $option): ?>
         <li>
             <span class="item<?php if($option['default']):?> item-default<?php endif; ?>" onclick="<?php echo $option['onclick']?>"><?php echo $option['label'] ?></span>
+            <?php if(isset($option['hint'])): ?>
             <div class="tooltip">
-                <a href="#helpme" class="help"><?php echo $this->__('What is this?');?></a>
+                <a href="<?php echo $option['hint']['href'] ?>" class="help"><?php echo $option['hint']['label'] ?></a>
             </div>
+            <?php endif; ?>
         </li>
         <?php endforeach; ?>
     </ul>
