--- a/app/code/core/Mage/DesignEditor/view/frontend/wrapper/remove.phtml
+++ b/app/code/core/Mage/DesignEditor/view/frontend/wrapper/remove.phtml
@@ -10,7 +10,7 @@
 ?>
 <?php /** @var $this Mage_DesignEditor_Block_Wrapper_Remove */ ?>
 <div class="vde_element_title vde_element_remove" id="<?php echo $this->getElementId(); ?>">
-    <a href="#remove" onclick="">
+    <a href="#remove">
         <img src="<?php echo $this->getSkinUrl('images/btn_remove.gif') ?>" alt="<?php echo $this->__('Remove')?>" />
     </a>
 </div>
