--- a/app/code/core/Mage/DesignEditor/view/frontend/wrapping.phtml
+++ b/app/code/core/Mage/DesignEditor/view/frontend/wrapping.phtml
@@ -14,15 +14,13 @@ $elementId = $this->getElementId();
 $elementHtml = $this->getElementHtml();
 $hideWrapping = $this->isHighlightingDisabled();
 $cssClass = 'vde_element_wrapper'
-    . ($this->getIsDraggable() ? ' vde_draggable' : '')
+    . ($this->getIsManipulationAllowed() ? ' vde_draggable vde_removable' : '')
     . ($this->getIsContainer() ? ' vde_container' : '')
     . ($hideWrapping ? ' vde_wrapper_hidden' : '');
 ?>
 <div id="<?php echo $elementId; ?>" class="<?php echo $cssClass; ?>" data-name="<?php echo $this->getElementName() ?>">
-    <div class="vde_element_title">
-        <?php echo $this->getElementTitle() ?>
-    </div>
-    <?php if (!$this->getIsContainer()): ?>
+    <div class="vde_element_title"><?php echo $this->getElementTitle() ?></div>
+    <?php if ($this->getIsManipulationAllowed()): ?>
         <?php echo $this->getRemoveButton($elementId) ?>
     <?php endif; ?>
     <?php if (!$hideWrapping) : ?>
