Implemented MAGETWO-2847: Remove Website Related Columns and Fields from Manage Customer Page

--- a/app/code/core/Enterprise/CustomerBalance/view/adminhtml/edit/js.phtml
+++ b/app/code/core/Enterprise/CustomerBalance/view/adminhtml/edit/js.phtml
@@ -10,7 +10,7 @@
 ?>
 <script type="text/javascript">
 //<![CDATA[
-function updateEmailWebsites()
+updateEmailWebsites = function ()
 {
     var emailWebsites = $('<?php echo $this->getPrefix() ?>store_id');
     var balanceWebsites = $('<?php echo $this->getPrefix() ?>website_id');
