MAGETWO-2573 Migration of js Calendar on jQuery - refactored backend code to support date format and time format   separately in the calendar widget initialization - fixed broken regex and year formatting map in the calendar widget - deleted some obsolete code - introduced new set of updates in Mage_Page to facilitate code reusing   of calendar initialization and similar components - added a unique prefix to HTML-id of some widget elements - eliminated feature of converting date format from ISO to strftime()   and vice versa

--- a/app/code/core/Enterprise/Staging/view/adminhtml/staging/merge/settings/website.phtml
+++ b/app/code/core/Enterprise/Staging/view/adminhtml/staging/merge/settings/website.phtml
@@ -8,7 +8,7 @@
  * @license     {license_link}
  */
 ?>
-<?php /* @var $this Enterprise_Staging_Block_Manage_Staging_Merge_Settings_Website */?>
+<?php /* @var $this Enterprise_Staging_Block_Adminhtml_Staging_Merge_Settings_Website */?>
 <?php $staging          = $this->getStaging(); ?>
 <?php $items            = $staging->getItemsCollection(); ?>
 <?php $masterWebsites   = $this->getWebsiteCollection(); ?>
@@ -71,8 +71,8 @@
                                     $('#schedule_merge_later').calendar({
                                         buttonImage: "<?php echo $this->getSkinUrl("images/grid-cal.gif");?>",
                                         buttonText: "<?php echo $this->__('Select Date') ?>",
-                                        dateFormat: "M/d/yyyy",
-                                        timeFormat: "hh:mm:ss",
+                                        dateFormat: "<?php echo $this->getDateFormat() ?>",
+                                        timeFormat: "<?php echo $this->getTimeFormat() ?>",
                                         showsTime: true
                                     })
                                 })(jQuery)
