--- a/app/code/core/Mage/Adminhtml/view/adminhtml/system/convert/profile/wizard.phtml
+++ b/app/code/core/Mage/Adminhtml/view/adminhtml/system/convert/profile/wizard.phtml
@@ -8,19 +8,7 @@
  * @license     {license_link}
  */
 ?>
-<?php
-/**
- * @methods
- * - getValue($key, $default)
- * - getSelected($key, $value)
- * - getChecked($key)
- * - getAttributes()
- * - getMappings()
- * - getAddMapButtonHtml()
- * - getRemoveMapButtonHtml()
- */
-?>
-
+<?php /** @var $this Mage_Adminhtml_Block_System_Convert_Gui_Edit_Tab_Wizard */ ?>
 <script type="text/javascript">
 //<![CDATA[
 var profileImportOnly = ['profile_number_of_records', 'profile_decimal_separator'];
