--- a/app/code/core/Enterprise/Customer/view/frontend/form/renderer/date.phtml
+++ b/app/code/core/Enterprise/Customer/view/frontend/form/renderer/date.phtml
@@ -9,12 +9,7 @@
  */
 ?>
 <?php
-/**
- * Create account form template
- *
- * @see Enterprise_Customer_Block_Form_Renderer_Date
- */
-/* @var $this Enterprise_Customer_Block_Form_Renderer_Date */
+/** @var $this Enterprise_Eav_Block_Form_Renderer_Date */
 ?>
 <label for="<?php echo $this->getHtmlId('month')?>"<?php if ($this->isRequired()) echo ' class="required"' ?>><?php if ($this->isRequired()) echo '<em>*</em>' ?><?php echo $this->getLabel() ?></label>
 <div class="input-box customer-dob">
