--- a/app/code/core/Mage/Adminhtml/view/adminhtml/report/grid.phtml
+++ b/app/code/core/Mage/Adminhtml/view/adminhtml/report/grid.phtml
@@ -9,15 +9,7 @@
  */
 ?>
 <?php
-/**
- * Template for Mage_Block_Adminhtml_Report_Grid
- *
- *  getId()
- *  getCollection()
- *  getColumns()
- *  getPagerVisibility()
- *  getVarNamePage()
- */
+/** @var $this Mage_Adminhtml_Block_Report_Grid */
 $numColumns = sizeof($this->getColumns());
 ?>
 <?php if($this->getCollection()): ?>
@@ -42,20 +34,20 @@ $numColumns = sizeof($this->getColumns());
         <table cellspacing="0" class="actions">
             <tr>
         <?php if($this->getDateFilterVisibility()): ?>
-            <td class="a-left filter" id="period_date_range">
+            <td class="a-left filter" id="<?php echo $this->getSuffixId('period_date_range')?>">
                 <div class="f-left">
-                    <div><?php echo $this->__('From') ?>:&nbsp;<input class="input-text no-changes required-entry" type="text" id="period_date_from" name="report_from" value="<?php echo $this->getFilter('report_from') ?>" style="width:5em" />&nbsp;&nbsp;</div>
-                    <div id="period_date_from_advaice"></div>
+                    <div><?php echo $this->__('From') ?>:&nbsp;<input class="input-text no-changes required-entry" type="text" id="<?php echo $this->getSuffixId('period_date_from')?>" name="report_from" value="<?php echo $this->getFilter('report_from') ?>" style="width:5em" />&nbsp;&nbsp;</div>
+                    <div id="<?php echo $this->getSuffixId('period_date_from_advice')?>"></div>
                 </div>
 
                 <div class="f-left">
-                    <div><?php echo $this->__('To') ?>:&nbsp;<input  class="input-text no-changes required-entry" type="text" id="period_date_to" name="report_to"  value="<?php echo $this->getFilter('report_to') ?>" style="width:5em" />&nbsp;&nbsp;</div>
-                    <div id="period_date_to_advaice"></div>
+                    <div><?php echo $this->__('To') ?>:&nbsp;<input  class="input-text no-changes required-entry" type="text" id="<?php echo $this->getSuffixId('period_date_to')?>" name="report_to"  value="<?php echo $this->getFilter('report_to') ?>" style="width:5em" />&nbsp;&nbsp;</div>
+                    <div id="<?php echo $this->getSuffixId('period_date_to_advice')?>"></div>
                 </div>
 
                 <div class="f-left">
                     <?php echo $this->__('Show By') ?>:
-                    <select name="report_period" id="report_period" style="width:6em;">
+                    <select name="report_period" id="<?php echo $this->getSuffixId('report_period')?>" style="width:6em;">
                     <?php foreach ($this->getPeriods() as $_value=>$_label): ?>
                         <option value="<?php echo $_value ?>" <?php if($this->getFilter('report_period')==$_value): ?> selected<?php endif; ?>><?php echo $_label ?></option>
                     <?php endforeach; ?>
@@ -64,15 +56,15 @@ $numColumns = sizeof($this->getColumns());
                 </div>
                 <script type="text/javascript">
                 (function( $ ) {
-                    $("#period_date_range").date_range({
+                    $("#<?php echo $this->getSuffixId('period_date_range') ?>").date_range({
                         dateFormat: "<?php echo $this->getDateFormat() ?>",
                         buttonImage: "<?php echo $this->getSkinUrl('images/grid-cal.gif') ?>",
                         buttonText: "<?php echo $this->__('Select Date') ?>",
                         from: {
-                            id: "period_date_from"
+                            id: "<?php echo $this->getSuffixId('period_date_from')?>"
                         },
                         to: {
-                            id: "period_date_to"
+                            id: "<?php echo $this->getSuffixId('period_date_to')?>"
                         }
                     })
                 })(jQuery)
@@ -82,7 +74,7 @@ $numColumns = sizeof($this->getColumns());
         <?php if($this->getExportVisibility()): ?>
             <td class="a-right">
                 <img src="<?php echo $this->getSkinUrl('images/icon_export.gif') ?>" alt="" class="v-middle"/>&nbsp; <?php echo $this->__('Export to:') ?>
-                <select name="<?php echo $this->getId() ?>_export" id="<?php echo $this->getId() ?>_export" style="width:8em;">
+                <select name="<?php echo $this->getSuffixId('export')?>" id="<?php echo $this->getSuffixId('export')?>" style="width:8em;">
                 <?php foreach ($this->getExportTypes() as $_type): ?>
                     <option value="<?php echo $_type->getUrl() ?>"><?php echo $_type->getLabel() ?></option>
                 <?php endforeach; ?>
@@ -95,7 +87,7 @@ $numColumns = sizeof($this->getColumns());
     <?php endif; ?>
 
     <div class="grid">
-    <table cellspacing="0" class="data" id="<?php echo $this->getId() ?>_table">
+    <table cellspacing="0" class="data" id="<?php echo $this->getSuffixId('table')?>">
         <col/>
         <?php foreach ($this->getColumns() as $_column): ?>
         <col <?php echo $_column->getHtmlProperty() ?>/>
@@ -172,10 +164,10 @@ $numColumns = sizeof($this->getColumns());
     <?php echo $this->getJsObjectName() ?>.useAjax = '<?php echo $this->getUseAjax() ?>';
     <?php if($this->getDateFilterVisibility()):?>
     <?php echo $this->getJsObjectName() ?>.doFilterCallback = validateFilterDate;
-    var period_date_from = $('period_date_from');
-    var period_date_to   = $('period_date_to');
-    period_date_from.advaiceContainer = $('period_date_from_advaice');
-    period_date_to.advaiceContainer = $('period_date_to_advaice');
+    var period_date_from = $('<?php echo $this->getSuffixId('period_date_from')?>');
+    var period_date_to   = $('<?php echo $this->getSuffixId('period_date_to')?>');
+    period_date_from.adviceContainer = $('<?php echo $this->getSuffixId('period_date_from_advice')?>');
+    period_date_to.adviceContainer = $('<?php echo $this->getSuffixId('period_date_to_advice')?>');
 
     function validateFilterDate()
     {
@@ -200,7 +192,7 @@ $numColumns = sizeof($this->getColumns());
         if(obj.switchParams){
             storeParam+= obj.switchParams;
         }
-        var formParam = new Array('period_date_from', 'period_date_to', 'report_period');
+        var formParam = new Array('<?php echo $this->getSuffixId('period_date_from')?>', '<?php echo $this->getSuffixId('period_date_to')?>', '<?php echo $this->getSuffixId('report_period')?>');
         var paramURL = '';
         var switchURL = '<?php echo $this->getAbsoluteGridUrl(array('_current' => false)); ?>'.replace(/(store|group|website)\/\d+\//,'');
 
