--- a/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/edit/options/option.phtml
+++ b/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/edit/options/option.phtml
@@ -25,7 +25,7 @@ window.firstStepTemplate = '<div class="option-box" id="option_{{id}}">'+
                     '<th class="opt-type"><?php echo Mage::helper('Mage_Catalog_Helper_Data')->__('Input Type') ?> <span class="required">*</span></th>'+
                     '<th class="opt-req"><?php echo $this->jsQuoteEscape(Mage::helper('Mage_Catalog_Helper_Data')->__('Is Required')) ?></th>'+
                     '<th class="opt-order"><?php echo Mage::helper('Mage_Catalog_Helper_Data')->__('Sort Order') ?></th>'+
-                    '<th class="a-right"><?php echo $this->jsQuoteEscape($this->getDeleteButtonHtml()) ?></th>'+
+                    '<th class="a-right">' + <?php echo $this->helper('Mage_Catalog_Helper_Data')->jsonEncode($this->getDeleteButtonHtml()) ?> + '</th>'+
                 '</tr>'+
             '</thead>'+
             '<tr>'+
