--- a/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/edit/options/type/select.phtml
+++ b/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/edit/options/type/select.phtml
@@ -29,7 +29,7 @@ OptionTemplateSelect = '<table class="border" cellpadding="0" cellspacing="0">'+
         '</tbody>'+
         '<tfoot>'+
         '<tr>'+
-        '<td colspan="100" class="a-right"><?php echo $this->getAddButtonHtml() ?></td>'+
+        '<td colspan="100" class="a-right">' + <?php echo $this->helper('Mage_Catalog_Helper_Data')->jsonEncode($this->getAddButtonHtml()) ?>  +'</td>'+
         '</tr>'+
         '</tfoot>'+
     '</table>';
@@ -48,7 +48,7 @@ OptionTemplateSelectRow = '<tr id="product_option_{{id}}_select_{{select_id}}">'
             <?php endif; ?>
             '<td><input type="text" class="input-text" name="product[options][{{id}}][values][{{select_id}}][sku]" value="{{sku}}"></td>'+
             '<td><input type="text" class="validate-zero-or-greater input-text" name="product[options][{{id}}][values][{{select_id}}][sort_order]" value="{{sort_order}}"></td>'+
-            '<td class="last"><span title="Delete row"><?php echo $this->getDeleteButtonHtml() ?></span></td>'+
+            '<td class="last"><span title="Delete row">' + <?php echo $this->helper('Mage_Catalog_Helper_Data')->jsonEncode($this->getDeleteButtonHtml()) ?> +'</span></td>'+
         '</tr>';
 
 selectOptionType = {
