--- a/app/code/core/Mage/Page/view/frontend/js/calendar.phtml
+++ b/app/code/core/Mage/Page/view/frontend/js/calendar.phtml
@@ -18,7 +18,7 @@
 
 <script type="text/javascript">
 //<![CDATA[
-(function( $ ) {
+(function($) {
     $.extend(true, $, {
         calendarConfig: {
             dayNames: <?php echo $days['wide']?>,
@@ -38,6 +38,8 @@
             dateFormat: $.datepicker.RFC_2822,
             showOn: "button",
             showAnim: "",
+            changeMonth: true,
+            changeYear: true,
             buttonImageOnly: true,
             showButtonPanel: true,
             showWeek: true,
@@ -47,7 +49,7 @@
             showMinute: false
         }
     });
-})( jQuery );
+})(jQuery);
 enUS = <?php echo $enUS?>; // en_US locale reference
 //]]>
 </script>
