--- a/app/code/core/Mage/Adminhtml/view/adminhtml/system/convert/profile/wizard.phtml
+++ b/app/code/core/Mage/Adminhtml/view/adminhtml/system/convert/profile/wizard.phtml
@@ -505,7 +505,7 @@ Event.observe(window, 'load', function(){
                 </span>
                 <script type="text/javascript">
                     (function( $ ) {
-                        $("#customer_filter_created_at_range").date_range({
+                        $("#customer_filter_created_at_range").dateRange({
                             dateFormat: "<?php echo $this->getShortDateFormat() ?>",
                             buttonImage: "<?php echo $this->getSkinUrl('images/grid-cal.gif') ?>",
                             buttonText: "<?php echo $this->__('Date selector') ?>",
