CR Changes MAGETWO-2859: Workaround in Mage_Backend_Block_Widget_Button::_afterToHtml() method should be removed

--- a/app/code/core/Enterprise/GiftRegistry/view/adminhtml/edit/attributes.phtml
+++ b/app/code/core/Enterprise/GiftRegistry/view/adminhtml/edit/attributes.phtml
@@ -35,7 +35,7 @@ var attributeTemplate =
             '<th class="opt-title"><?php echo Mage::helper('Enterprise_GiftRegistry_Helper_Data')->__('Label') ?> <span class="required">*</span></th>'+
             '<th class="opt-req"><?php echo Mage::helper('Enterprise_GiftRegistry_Helper_Data')->__('Is Required') ?></th>'+
             '<th class="opt-order"><?php echo Mage::helper('Enterprise_GiftRegistry_Helper_Data')->__('Sort Order') ?></th>'+
-            '<th class="a-right"><?php echo $this->jsQuoteEscape($this->getDeleteButtonHtml()) ?></th>'+
+            '<th class="a-right">' + <?php echo Mage::helper('Mage_Core_Helper_Data')->jsonEncode($this->getDeleteButtonHtml()) ?> + '</th>'+
         '</tr>'+
     '</thead>'+
     '<tr>'+
